// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerBody should be rendered with maximum props 1`] = `
Array [
  <div
    className="searchWrapper"
  >
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="container uui-input-box -clickable root uui-size-48 mode-form"
        dir="auto"
        onFocus={[Function]}
        tabIndex={-1}
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
        <input
          aria-invalid={false}
          className="uui-input"
          dir="ltr"
          inputMode="search"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          tabIndex={0}
          type="search"
          value=""
        />
      </div>
    </div>
  </div>,
  <div
    className="uui-flex-row root uui-size-36 uui-picker_input-body modal undefined container align-items-center"
    style={
      Object {
        "columnGap": undefined,
        "maxHeight": 800,
        "maxWidth": undefined,
        "rowGap": undefined,
      }
    }
  >
    <div
      className="root root uui-scroll-bars uui-shadow-top uui-shadow-bottom scrollContainer"
      style={
        Object {
          "display": "flex",
          "height": "100%",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "bottom": 0,
            "display": "flex",
            "flex": "1 1 auto",
            "flexDirection": "column",
            "left": 0,
            "marginBottom": 0,
            "marginRight": 0,
            "overflow": "scroll",
            "position": "relative",
            "right": 0,
            "top": 0,
          }
        }
      >
        <div
          className="listContainer"
          style={
            Object {
              "minHeight": "0px",
            }
          }
        >
          <div
            style={
              Object {
                "marginTop": 0,
              }
            }
          >
            <div
              aria-posinset={3}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      A1
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={4}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      A1+
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={5}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      A2
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={6}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      A2+
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={7}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      B1
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={8}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      B1+
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={9}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      B2
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={10}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      B2+
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={11}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      C1
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={12}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      C1+
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-posinset={13}
              className="uui-flex-row pickerRow container align-items-center"
              role="option"
              style={
                Object {
                  "columnGap": undefined,
                  "rowGap": undefined,
                }
              }
            >
              <div
                className="flexCell root data-picker-cell uui-size-36 align-widgets-top"
                role="cell"
                style={
                  Object {
                    "--uui-data_picker_cell-horizontal-padding": "24px",
                    "alignSelf": undefined,
                    "flexBasis": "0",
                    "flexGrow": 1,
                    "flexShrink": undefined,
                    "minWidth": 0,
                    "textAlign": undefined,
                  }
                }
              >
                <div
                  className="contentWrapper"
                >
                  <div
                    className="renderItem"
                  >
                    <div>
                      C2
                    </div>
                    <div
                      className="flexSpacer"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-busy="false"
        aria-label=""
        aria-live="polite"
        className="container uui-blocker-container root"
        role="status"
        style={
          Object {
            "minHeight": undefined,
          }
        }
      />
      <div
        className="uui-track-horizontal"
        style={
          Object {
            "display": "none",
            "height": 6,
            "position": "absolute",
          }
        }
      >
        <div
          className="uui-thumb-horizontal"
        />
      </div>
      <div
        className="uui-track-vertical"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": 6,
          }
        }
      >
        <div
          className="uui-thumb-vertical"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`DataPickerBody should be rendered with minimum props 1`] = `
<div
  className="uui-flex-row root uui-size-36 uui-picker_input-body undefined undefined container align-items-center"
  style={
    Object {
      "columnGap": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "rowGap": undefined,
    }
  }
>
  <div
    className="noData"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": "center",
      }
    }
  >
    <div
      className="root uui-text uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography line-height-18 font-size-14 v-padding-9 container"
    >
      No records found
    </div>
  </div>
</div>
`;

exports[`DataPickerBody should be rendered without rows 1`] = `
<div
  className="uui-flex-row root uui-size-36 uui-picker_input-body undefined undefined container align-items-center"
  style={
    Object {
      "columnGap": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "rowGap": undefined,
    }
  }
>
  <div>
    Not found
  </div>
</div>
`;
